--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: libraryComFront
 
 on:
   push:
-    branches: [main]
+    branches: [-main]
   pull_request:
-    branches: [main]
+    branches: [-main]
 
 env:
   APP_NAME: library-com-front
