--- a/.github/workflows/ci-2.yml
+++ b/.github/workflows/ci-2.yml
@@ -48,7 +48,7 @@ jobs:
             sudo docker build -t ${{env.APP_NAME}} https://${{env.TOKEN}}@github.com/${{env.GIT_REPO}}.git#${{env.BRANCH}}
 
             #run container from images & set labels configuration for traefik
-            # sudo docker run -d --name ${{env.APP_NAME}} --restart=unless-stopped -p ${{env.APP_PORT}}:${{env.APP_PORT}} ${{env.APP_NAME}}
+            sudo docker run -d --name ${{env.APP_NAME}} --restart=unless-stopped -p ${{env.APP_PORT}}:${{env.APP_PORT}} ${{env.APP_NAME}}
 
             # sudo docker run -d \
             # --restart unless-stopped \
