--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "pwa": "http-server -p 8080 -c-1 dist/angular-test/browser",
     "dev:ssr": "ng run angular-test:serve-ssr",
     "serve:ssr": "node dist/angular-test/server/main.js",
     "build:ssr": "ng build && ng run angular-test:server --configuration production",
@@ -23,6 +24,7 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/platform-server": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@angular/service-worker": "~13.3.0",
     "@nguniversal/express-engine": "^13.0.2",
     "express": "^4.15.2",
     "rxjs": "~7.4.0",
@@ -37,6 +39,7 @@
     "@types/express": "^4.17.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "http-server": "^14.1.0",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
