--- a/.github/workflows/ci-2.yml
+++ b/.github/workflows/ci-2.yml
@@ -2,9 +2,9 @@ name: angularAdv
 
 on:
   push:
-    branches: [main]
+    branches: [-main]
   pull_request:
-    branches: [main]
+    branches: [-main]
 
 env:
   APP_NAME: angular-adv
