--- a/.github/workflows/jenkings-ci.yml
+++ b/.github/workflows/jenkings-ci.yml
@@ -1,8 +1,9 @@
 name: trigger jenkins job
 
+# or add https://jenkins.mohamed-mourabit.com/github-webhook
 on:
   push:
-    branches: [main]
+    branches: [-main]
   pull_request:
     branches: [main]
 
